--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@lk/basic-utility",
-  "version": "1.0.1",
-  "description": "",
+  "name": "basic-utility-lk",
+  "version": "1.0.0",
+  "description": "a basic tool",
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "import": "./dist/index.es.js"
     }
   },
@@ -14,12 +14,13 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest test",
     "prettier": "prettier '**/*.{js,ts}' --ignore-path ./.prettierignore",
-    "build": "npm run build:clean && npm run build:lib",
+    "build": "npm run build:clean && npm run build:pro",
     "build:clean": "rimraf dist",
-    "build:pro": "rimraf dist/ && rollup --config ./rollup.config.pro.js",
-    "build:dev": "rimraf example/dist/ && rollup --config ./rollup.config.dev.js -w"
+    "build:pro": "rollup --config ./rollup.config.pro.js",
+    "build:dev": "rimraf example/dist/ && rollup --config ./rollup.config.dev.js -w",
+    "doc": "jsdoc ./example/dist/index.es.js && node server.js "
   },
   "author": "luokang",
   "license": "MIT",
@@ -29,15 +30,16 @@
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^14.1.0",
-    "prettier": "^2.7.1",
-    "rollup": "^2.79.0",
-    "rollup-plugin-terser": "^7.0.2"
-  },
-  "dependencies": {
     "husky": "^8.0.1",
+    "jest": "^29.0.3",
+    "jsdoc": "^3.6.11",
+    "open": "^8.4.0",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "rollup": "^2.79.0",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^2.0.1"
+    "rollup-plugin-serve": "^2.0.1",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "husky": {
     "hooks": {
